Fix: overflow to hidden

--- a/index.css
+++ b/index.css
@@ -28,6 +28,7 @@
   height: 200px;
   border-radius: 12px;
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
 }
 
 .delete-button {
